[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/Stone_Platform.png" type="Texture" id=1]
[ext_resource path="res://Escenes/PersonatgeVermell.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenes/PersonatgeBlau.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/Sprites/Solid_Red_Sized__25214.1507754519.jpg" type="Texture" id=4]
[ext_resource path="res://Escenes/PersonatgeVermellLava.gd" type="Script" id=5]
[ext_resource path="res://Escenes/PersonatgeBlauLava.gd" type="Script" id=6]
[ext_resource path="res://Escenes/KinematicBody2D.gd" type="Script" id=7]
[ext_resource path="res://Escenes/Plataformes.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960.967, 93.1028 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 172.314, 26.9177 )

[node name="Minijoc Lava" type="Node2D"]

[node name="StaticBody2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 958.246, 995.53 )
scale = Vector2( 2, 0.149684 )
z_index = 1
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 957.99, 1003.04 )
scale = Vector2( 2, 1 )
shape = SubResource( 2 )

[node name="Plats" type="Node" parent="."]

[node name="KinematicBody2D6" type="KinematicBody2D" parent="Plats"]
position = Vector2( 686.045, 95.2452 )
scale = Vector2( 1.08187, 1.08187 )
script = ExtResource( 7 )

[node name="plataformes" type="Sprite" parent="Plats/KinematicBody2D6"]
position = Vector2( 53.3987, 4.21011 )
scale = Vector2( 1.46976, 1.11551 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plats/KinematicBody2D6"]
position = Vector2( 45.516, -18.8808 )
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Plats"]
position = Vector2( 135.279, 645.572 )
scale = Vector2( 1.04013, 1.04013 )
script = ExtResource( 7 )

[node name="plataformes" type="Sprite" parent="Plats/KinematicBody2D"]
position = Vector2( 53.3987, 4.21011 )
scale = Vector2( 1.46976, 1.11551 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plats/KinematicBody2D"]
position = Vector2( 55.3973, -22.5729 )
shape = SubResource( 1 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Plats"]
position = Vector2( 690.279, 493.572 )
scale = Vector2( 1.04013, 1.04013 )
script = ExtResource( 7 )

[node name="plataformes" type="Sprite" parent="Plats/KinematicBody2D2"]
position = Vector2( 53.3987, 4.21011 )
scale = Vector2( 1.46976, 1.11551 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plats/KinematicBody2D2"]
position = Vector2( 50.2143, -22.2942 )
shape = SubResource( 1 )

[node name="KinematicBody2D4" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1259.98, 324.924 )
scale = Vector2( 1.08187, 1.08187 )

[node name="KinematicBody2D8" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 189.558, -109.148 )

[node name="KinematicBody2D9" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 675.878, -276.962 )

[node name="KinematicBody2D10" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 192.983, -509.848 )

[node name="KinematicBody2D11" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1145.47, -502.258 )

[node name="KinematicBody2D12" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 649.29, -760.599 )

[node name="KinematicBody2D13" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1189.73, -937.641 )

[node name="KinematicBody2D14" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 653.949, -1151.95 )

[node name="KinematicBody2D15" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 168.433, -1348.12 )

[node name="KinematicBody2D16" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1119.39, -1353.56 )

[node name="KinematicBody2D17" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1565.55, -1570.92 )

[node name="KinematicBody2D18" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1538.86, -156.549 )

[node name="KinematicBody2D19" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 938.421, -1824.44 )

[node name="KinematicBody2D20" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 324.639, -1997.9 )

[node name="KinematicBody2D21" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 917.038, -2209.46 )

[node name="KinematicBody2D22" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1505.85, -2420.37 )

[node name="KinematicBody2D23" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1045.04, -2665.18 )

[node name="KinematicBody2D24" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 512.232, -2809.18 )

[node name="KinematicBody2D25" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 987.443, -3097.19 )

[node name="KinematicBody2D26" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1491.45, -3298.79 )

[node name="KinematicBody2D27" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1070.67, -3635.42 )

[node name="KinematicBody2D28" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 420.151, -3332.33 )

[node name="KinematicBody2D29" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 434.936, -3857.19 )

[node name="KinematicBody2D30" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1115.03, -3975.46 )

[node name="KinematicBody2D31" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1676.84, -4138.09 )

[node name="KinematicBody2D32" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1279.99, -4363.75 )

[node name="KinematicBody2D33" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 719.734, -4534.94 )

[node name="KinematicBody2D34" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 221.727, -4815.07 )

[node name="KinematicBody2D35" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 702.745, -5014.74 )

[node name="KinematicBody2D36" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 702.745, -5014.74 )

[node name="KinematicBody2D38" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1220.07, -5314.24 )

[node name="KinematicBody2D37" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1220.07, -5314.24 )

[node name="KinematicBody2D40" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1325.63, -4798.16 )

[node name="KinematicBody2D39" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 1325.63, -4798.16 )

[node name="KinematicBody2D42" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 586.691, -5513.64 )

[node name="KinematicBody2D41" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 586.691, -5513.64 )

[node name="KinematicBody2D44" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 187.9, -5865.51 )

[node name="KinematicBody2D43" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 187.9, -5865.51 )

[node name="KinematicBody2D46" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 657.066, -6076.64 )

[node name="KinematicBody2D45" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 657.066, -6076.64 )

[node name="KinematicBody2D48" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 657.066, -6076.64 )

[node name="KinematicBody2D47" parent="Plats" instance=ExtResource( 8 )]
position = Vector2( 657.066, -6076.64 )

[node name="PersonatgeVermell" parent="." instance=ExtResource( 2 )]
position = Vector2( 111.852, 534.966 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 5 )

[node name="PersonatgeBlau" parent="." instance=ExtResource( 3 )]
position = Vector2( 268.032, 536.946 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="StaticBody2D" to="PersonatgeBlau" method="_on_StaticBody2D_body_entered"]
[connection signal="body_entered" from="StaticBody2D" to="PersonatgeVermell" method="_on_StaticBody2D_body_entered"]
[connection signal="timeout" from="Timer" to="PersonatgeBlau" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="PersonatgeVermell" method="_on_Timer_timeout"]
